--- a/10 31/12_form/views/result.ejs
+++ b/10 31/12_form/views/result.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>폼 전송을 배워보자 </h1>
+    <h1><%= title %></h1>
+    <div><span><%= userInfo.id %></span>님 환영합니다.</div>
+    <div><span><%= userInfo.password %></span>는 비밀번호 입니다.</div>
+    <a href="/">메인으로</a>
 </body>
 </html>
